sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:19: error: value ++ is not a member of Int
    i++;
     ^